discussion/kv_engine/162979/162979_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47318: Add DCP Control to configure consumer flow control

Allow the client of the consumer to override the flow control
buffer size which can be used by tests to give greater control
over the flow-control logic.

Change-Id: I5588695c002a739c6d3c33ffb5ec37c3bd8de878

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-10-05 11:44:01.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-05 12:27:19.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34666/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16:
error: member reference base type "double (double) throw()" is not a structure or union
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34666/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40751/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/dcp/consumer.cc(1940): error C2227: left of "->warn" must point to class/struct/union/generic type ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40751/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13142/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16: error: member reference base type "double (double) throw()" is not a structure or union [clang-diagnostic-error]
            log->warn("changing flow control buffer size:{}", result);
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13142/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16:
error: member reference base type "double (double) throw()" is not a structure or union [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13142/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15594/ : FAILURE

Compile error at [2021-10-05T12:26:27.729Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16:
error: member reference base type "double (double) throw()" is not a structure or union
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15594/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23027/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2760/ : FAILURE

Compile error at [2021-10-05T12:21:42.939Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16:
error: member reference base type "double (double) throw()" is not a structure or union
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2760/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14740/ : FAILURE

Compile error at [2021-10-05T12:24:10.173Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:18:
error: request for member ?warn? in ?* log?, which is of non-class type ?double(double) noexcept?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14740/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2795/ : FAILURE

Compile error at [2021-10-05T11:54:39.616Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:18:
error: request for member ?warn? in ?* log?, which is of non-class type ?double(double) noexcept?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2795/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13888/ : FAILURE

Compile error at [2021-10-05T11:49:00.812Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/dcp/consumer.cc:1940:13:
error: reference to overloaded function could not be resolved; did you mean to call it?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13888/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15010/ : FAILURE

Compile error at [2021-10-05T12:24:23.494Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:18:
error: request for member ?warn? in ?* log?, which is of non-class type ?double(double) noexcept?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15010/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11928/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
